# alphard

./: .gitignore  .pre-commit-config.yaml  Jenkinsfile  README.md  pdf_text_extractor.ipynb  pyproject.toml  sentiment_analysis_simple.ipynb  setup.py  unbreak_text.ipynb
.github/workflows/: ci.yml  deploy_api.yml  deploy_training.yml
app/: aws_load_balanced_instance_generator.tf  graphQL_docker-compose.yml  kubeflow_pipeline_manager.py  terraformer.py  veriquo.py  vocoder.py
fastAPI/: Dockerfile  requirements.txt
graphQL/: Dockerfile
